--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue": "^3.2.36"
     },
     "dependencies": {
+        "vee-validate": "^4.5.8",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.2.4",
         "vuex": "^4.1.0",
